--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-xstream -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-xstream</artifactId>
+            <version>2.20.4</version>
+        </dependency>
+
 
         <!--Camel-gson-->
         <dependency>
